# eon

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  flake.nix
eon-client/: Cargo.toml
eon-client/src/: app.rs  main.rs  net.rs
eon-client/src/app/: cli.rs  controller.rs  repl.rs  state.rs
eon-client/src/net/: event_loop.rs  network.rs  network2.rs  stream_manager.rs
libp2p-invert/: Cargo.toml
libp2p-invert/src/: event_subscriber.rs  lib.rs  swarm_client.rs  tools.rs
libp2p-scaffolding/: Cargo.toml
libp2p-scaffolding/src/: event_subscriber.rs  lib.rs
objects/: Cargo.toml
objects/src/: core.rs  lib.rs  prelude.rs  storage.rs  testing_obj.rs
objects/src/core/: object.rs  pins.rs  query.rs  rpc.rs
objects/src/storage/: database.rs  object_parser.rs
scripts/: get.sh  start.sh  start_bootstrap.sh
src/: app_cli.rs  app_controller.rs  app_state.rs  asymmetric_codec.rs  core.rs  event_loop.rs  main.rs  minivault.rs  network.rs  object_parser.rs  parser.rs  parsing.rs  pins.rs  repl.rs  stream_manager.rs  system.rs  testing_obj.rs
test/: Dockerfile  package.sh  run.sh
test/scenario/simple/: 1000k.yaml  simple.yaml
testing/: Cargo.toml
testing/src/: main.rs
