[package]
name = "libp2p-beams"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[package.metadata.release]
release = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.6", features = ["derive"] }
libp2p = { version = "0.54.1", features = ["tokio", "cbor", "dns", "kad", "noise", "macros", "request-response", "tcp", "websocket", "yamux", "identify"] }
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
libp2p-stream = "0.2.0-alpha"
uuid = { version = "1.11.0", features = ["serde"] }
postcard = { version = "1.1.1", features = ["alloc"] }
heck = "0.5.0"
base64 = "0.22.1"
blake3 = { version = "1.5.5", features = ["serde"] }
tokio-util = { version = "0.7.13", features = ["full"] }
anyhow = "1.0.95"
tracing-appender = "0.2.3"
tracing = "0.1.41"
shlex = "1.3.0"
dirs = "5.0.1"
bytes = "1.9.0"
